@@ -255,7 +255,7 @@ rb_gst_bin_clear(VALUE self)
 static VALUE
 rb_gst_bin_each_element(VALUE self)
 {
-    return rb_ary_yield(rb_gst_bin_get_children (self));
+    return rb_ary_yield(rb_gst_bin_get_children(self));
 }
 
 /*
@@ -368,6 +368,38 @@ rb_gst_bin_get(int argc, VALUE *argv, VALUE self)
 /*     return rb_ary_yield (rb_gst_bin_get_all_by_if (self, klass)); */
 /* } */
 
+static VALUE
+rb_gst_bin_get_sinks(VALUE self)
+{
+    VALUE sinks;
+    GstIterator *iter;
+    gboolean done = FALSE;
+
+    sinks = rb_ary_new();
+    iter = gst_bin_iterate_sinks(SELF(self));
+    while (!done) {
+        gpointer item;
+        switch (gst_iterator_next(iter, &item)) {
+          case GST_ITERATOR_OK:
+            rb_ary_push(sinks, GST_ELEMENT2RVAL(item));
+            gst_object_unref(item);
+            break;
+          case GST_ITERATOR_RESYNC:
+            gst_iterator_resync(iter);
+            break;
+          case GST_ITERATOR_ERROR:
+            done = TRUE;
+            break;
+          case GST_ITERATOR_DONE:
+            done = TRUE;
+            break;
+        }
+    }
+    gst_iterator_free(iter);
+
+    return sinks;
+}
+
 void
 Init_gst_bin (void)
 {
@@ -405,6 +437,9 @@ Init_gst_bin (void)
     rb_define_method(rb_cGstBin, "clear", rb_gst_bin_clear, 0);
 
     rb_define_method(rb_cGstBin, "[]", rb_gst_bin_get, -1);
+
+    rb_define_method(rb_cGstBin, "sinks", rb_gst_bin_get_sinks, 0);
+
     /* rb_define_method(rb_cGstBin, "iterate_all_by_interface", rb_gst_bin_iterate_all_by_if, 1); */
     /* rb_define_method(rb_cGstBin, "each_by_interface", rb_gst_bin_each_by_if, 1); */
 
